<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".EndActivity">

    <TextView
        android:id="@+id/playerWinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/winner" />

    <TextView
        android:id="@+id/playerLoser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/loser" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".1"
        android:onClick="onRestartGame"
        android:text="@string/newGame" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".5">

    </FrameLayout>

</LinearLayout>
